# papermerge.js

./: .babelrc.json  .eslintignore  .eslintrc.js  .gitignore  LICENSE  README.md  changelog.md  ember-cli-build.js  package-lock.json  package.json  pyproject.toml
.github/workflows/: build-image.yml  build-prod-image.yml  bump-version.yml  publish-to-dockerhub.yml  publish-to-ghcr.yml  publish.yml  tests.yml
app/: app.js  index.html  router.js  version.js
app/adapters/: application.js  document.js  folder.js  node.js  page.js  user.js
app/authenticators/: auth-token.js  oauth2.js
app/base/: routing.js
app/components/: breadcrumb.hbs  breadcrumb.js  document.hbs  document.js  document_version.hbs  documents-list.hbs  documents-list.js  documents.hbs  documents.js  dual_link_to.js  folder.hbs  folder.js  jumbo.hbs  label.hbs  login.hbs  nav-bar.hbs  node.hbs  node.js  nodes.hbs  ocr_status.hbs  page.hbs  pagination.hbs  panel.hbs  panel.js  panel_modes.hbs  permission.hbs  permission.js  spinner.hbs  table.hbs  tag.hbs  tags.hbs  ui_select.hbs
app/controllers/: authenticated.js  login.js
app/helpers/: capitalize.js  default_string.js  has_perm.js  is_equal.js  node_in_transition.js  setup_pagination_pages.js  truncatechars.js
app/initializers/: custom-id-generation.js
app/models/: automate.js  content_type.js  document.js  document_version.js  folder.js  group.js  node.js  page.js  permission.js  preferences.js  role.js  tag.js  token.js  user.js
app/modifiers/: adjust_element_height.js  autocomplete_highlight.js  context_menu.js  draggable.js  droppable.js  on-click-outside.js  scroll_into_view.js  show-when.js  text_to_dom.js  tooltip.js  (+2 more)
changelog.d/: 496.fixed.md  501.removed.md  510.misc.md  513.fixed.md
config/: environment.js
docker/: Dockerfile  nginx.conf
mirage/: config.js
tests/: index.html  test-helper.js
(+404 files in other folders)
